--- a/Hospital/src/main/java/gui/HospitalInterfaz.form
+++ b/Hospital/src/main/java/gui/HospitalInterfaz.form
@@ -258,7 +258,7 @@
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Group type="102" alignment="0" attributes="0">
                           <Component id="contenedorOpt" min="-2" max="-2" attributes="0"/>
-                          <EmptySpace min="0" pref="369" max="32767" attributes="0"/>
+                          <EmptySpace min="0" pref="2" max="32767" attributes="0"/>
                       </Group>
                       <Group type="102" alignment="0" attributes="0">
                           <EmptySpace max="-2" attributes="0"/>
@@ -303,9 +303,8 @@
                 <Component class="javax.swing.JLabel" name="jLabel1">
                   <Properties>
                     <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-                      <Image iconType="3" name="/Dise&#xf1;o sin t&#xed;tulo (1).png"/>
+                      <Image iconType="3" name="/logo.png"/>
                     </Property>
-                    <Property name="text" type="java.lang.String" value="jLabel1"/>
                   </Properties>
                 </Component>
               </SubComponents>
